Update structure to clear client server folders

--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Fullstack MERN app for reviewing users",
   "main": "app.js",
   "scripts": {
+    "server": "nodemon server/app.js",
     "start": "node app.js",
-    "app": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "client": "npm run start --prefix client",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev-install": "npm install && cd client && npm install && cd ..",
+    "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "author": "Efua Akumanyi (efuaakumanyi.com)",
   "license": "ISC",
@@ -20,6 +23,7 @@
     "validation": "^0.0.1"
   },
   "devDependencies": {
+    "concurrently": "^7.0.0",
     "nodemon": "^2.0.15"
   }
 }
