--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "server": "nodemon server/app.js",
-    "start": "node app.js",
+    "start": "node server/app.js",
     "client": "npm run start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev-install": "npm install && cd client && npm install && cd ..",
