--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
-    "config": "^3.3.9",
+    "dotenv": "^16.0.3",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^6.9.1",
+    "mongodb": "^5.1.0",
     "validation": "^0.0.1"
   },
   "devDependencies": {
