build: extends dev-install Wipe node_modules folders before installing dependencies

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node server/app.js",
     "client": "npm run start --prefix client",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev-install": "npm install && cd client && npm install && cd ..",
+    "dev-install": "rm -rf node_modules npm install && cd client && rm -rf node_modules && npm install && cd ..",
     "develop": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "author": "Efua Akumanyi (efuaakumanyi.com)",
